updated some text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>En node.js app</title>
+    <title>fepa's first node.js app</title>
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("jquery", "1.7.1");
@@ -12,8 +12,8 @@
     </style>
   </head>
   <body>
-    <h1>Tjenahej</h1>
-    <p id="num_listeners"></p>
+    <h1>Draw with node</h1>
+    <p>Amount of visitors: <span id="num_listeners"></span></p>
     <canvas id="c" width="700" height="400"></canvas>
   </body>
 </html>
