added a range element for choosing line width

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <h1>Draw with node</h1>
     <p>Amount of visitors: <span id="num_listeners"></span></p>
     <span class="colorpick">Color: #<input type="text" id="color" value="ff0000"/></span>
+    Width: <input type="range" id="width" min="1" max="10" />
     <canvas id="c" width="700" height="400"></canvas>
   </body>
 </html>
