--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
   <head>
     <title>fepa's first node.js app</title>
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      google.load("jquery", "1.7.1");
-      google.load("jqueryui", "1.8.16");
-    </script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/static/colorpicker/js/colorpicker.js"></script>
     <link rel="stylesheet" href="/static/colorpicker/css/colorpicker.css" type="text/css" media="screen" />
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
